--- a/index.html
+++ b/index.html
@@ -6,5 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV#2. HTML, CSS & Git Basics</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <div class="content">
+        <div class="header">
+          <div class="container">
+            <div class="header__row">
+              <div class="header__img">
+                <img src="/img/unnamed.jpg" alt="my photo" />
+              </div>
+              <div class="header__title">rs</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
