feat: add header block

--- a/index.html
+++ b/index.html
@@ -6,5 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV#2. HTML, CSS & Git Basics</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <div class="content">
+        <div class="header">
+          <div class="container">
+            <div class="header__row">
+              <div class="header__img">
+                <img src="/img/unnamed.jpg" alt="my photo" />
+              </div>
+              <div class="header__title">Denis Opekun</div>
+              <div class="header__about_me">
+               About me
+        I am a graduate Yanka Kupala State University of Grodno. My specialty is world economy.
+        And now I am a beginner Front-End developer.I am a purposeful and highly motivated person who can adjust
+          quickly to new surroundings.
+        My qualities such as sociability, flexibility and dependability make me good at teamwork.
+         I am well organized and detail oriented which I believe is a key to successfully managing responsibilities
+            </div>
+				<div class="header__my_contact">
+			<a target="_blank" href="https://instagram.com/denisopekun">Instagram</a>
+          <a target="_blank" href="https://t.me/dendude1">Telegram</a>
+          <a target="_blank" href="https://discordapp.com/users/932931904347439114/ ">Discord</a>          
+          <a target="_blank" href="https://www.linkedin.com/in/dennis-opekun">linkedin</a>
+          <a href="mailto:denopekun@outlook.com?subject=Вопрос по CV">Email</a>
+          <p> mobile: +375295661389</p>
+				</div>
+          </div>
+        </div>
+      </div>
+		<div class="main">
+			<div class="container">
+				
+			</div>
+
+		</div>
+    </div>
+  </body>
 </html>
