feat: add main block

--- a/index.html
+++ b/index.html
@@ -37,7 +37,34 @@
       </div>
 		<div class="main">
 			<div class="container">
-				
+				<div class="main__row">
+					<div class="main__code">
+						Code example
+          <pre>
+            <code>           
+              unction multiply (a, b){
+              return a * b;
+              }
+            </code>
+          </pre>
+					</div>
+					<ul class="main__courses">
+						<li>JavaScript Manual on learnjavascript.ru</li>
+						<li>RS Schools Course «JavaScript/Front-end.Stage 0</li>
+						<li>CodeCademy</li>
+					</ul>
+					<ul class="main__skiills">
+						<li>HTML5</li>
+						<li>CSS3</li>
+						<li>JavaScript Basics</li> 
+					</ul>
+					<ul class="main__language">
+						<li>Belorussian</li>
+						<li>English</li>
+						<li>Polish</li>
+						<li>Russian</li>
+					</ul>
+				</div>
 			</div>
 
 		</div>
