--- a/index.html
+++ b/index.html
@@ -134,6 +134,13 @@
             </div>
           </div>
         </div>
+        <footer class="footer">
+          <div class="container">
+            <div class="footer__row">
+              <div class="footer__text">opecun dennis 2022</div>
+            </div>
+          </div>
+        </footer>
       </div>
     </div>
   </body>
