--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="header__row">
               <div class="header__column">
                 <div class="header__img">
-                  <img src="/img/unnamed.jpg" alt="my photo" />
+                  <img src="/img/unnamed 1.png" alt="my photo"/>
                 </div>
               </div>
               <div class="header__column">
@@ -32,26 +32,25 @@
                 </div>
               </div>
               <div class="header__column">
-                <div class="header__my_contact title">
-                  <a target="_blank" href="https://instagram.com/denisopekun"
+                <ul class="header__my_contact ">
+                  <li><a target="_blank" href="https://instagram.com/denisopekun"
                     >Instagram</a
-                  >
-                  <a target="_blank" href="https://t.me/dendude1">Telegram</a>
+                  ></li>
+                  <li><a target="_blank" href="https://t.me/dendude1">Telegram</a>
                   <a
                     target="_blank"
                     href="https://discordapp.com/users/932931904347439114/ "
                     >Discord</a
-                  >
-                  <a
+                  ></li>
+                  <li><a
                     target="_blank"
                     href="https://www.linkedin.com/in/dennis-opekun"
                     >linkedin</a
                   >
-                  <a href="mailto:denopekun@outlook.com?subject=Вопрос по CV"
-                    >Email</a
-                  >
-                  <p>mobile: +375295661389</p>
-                </div>
+                 <li><a href="mailto:denopekun@outlook.com?subject=Вопрос по CV">Email</a
+                  ></li>
+					<li>mobile: +375295661389</li> 
+					 </ul>
               </div>
             </div>
           </div>
@@ -69,11 +68,13 @@
                     <div class="item__body">
                       <div class="item__title">Example code</div>
                       <div class="item__list">
-                        <code>
-                          <p>unction multiply (a, b){</p>
-                          <p>return a * b;</p>
-                          <p>}</p>
-                        </code>
+                        <pre>
+									<code>
+unction multiply (a, b){
+return a * b;
+}
+									</code>
+								 </pre>
                       </div>
                     </div>
                   </div>
@@ -141,6 +142,10 @@
           <div class="container">
             <div class="footer__row">
               <div class="footer__text">opecun dennis 2022</div>
+              <div class="footer__img">
+					<a href="https://rs.school/js/">
+					<img src="https://rs.school/images/rs_school_js.svg" alt="rs_school_js"/>
+              </div>
             </div>
           </div>
         </footer>
