--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="header__row">
               <div class="header__column">
                 <div class="header__img">
-                  <img src="/img/unnamed 1.png" alt="my photo"/>
+                  <img src="/assets/unnamed 1.png" alt="my photo"/>
                 </div>
               </div>
               <div class="header__column">
@@ -63,7 +63,7 @@
                 <div class="main__item item">
                   <div class="item__row">
                     <div class="item__image">
-                      <img src="/img/code-solid.svg" alt="code-solid" />
+                      <img src="/assets/code-solid.svg" alt="code-solid" />
                     </div>
                     <div class="item__body">
                       <div class="item__title">Example code</div>
@@ -85,7 +85,7 @@ return a * b;
                   <div class="item__row">
                     <div class="item__image">
                       <img
-                        src="/img/file-lines-regular.svg"
+                        src="/assets/file-lines-regular.svg"
                         alt="file-lines-regular"
                       />
                     </div>
@@ -104,7 +104,7 @@ return a * b;
                 <div class="main__item item">
                   <div class="item__row">
                     <div class="item__image">
-                      <img src="/img/gears-solid.svg" alt="gears-solid" />
+                      <img src="/assets/gears-solid.svg" alt="gears-solid" />
                     </div>
                     <div class="item__body">
                       <div class="item__title">my skills</div>
@@ -121,7 +121,7 @@ return a * b;
                 <div class="main__item item">
                   <div class="item__row">
                     <div class="item__image">
-                      <img src="/img/language-solid.svg" alt="language-solid" />
+                      <img src="/assets/language-solid.svg" alt="language-solid" />
                     </div>
                     <div class="item__body">
                       <div class="item__title">languages</div>
