refactor: add dots to links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>CV#2. HTML, CSS & Git Basics</title>
   </head>
   <body>
@@ -15,7 +15,7 @@
             <div class="header__row">
               <div class="header__column">
                 <div class="header__img">
-                  <img src="/assets/unnamed 1.png" alt="my photo"/>
+                  <img src="./assets/unnamed 1.png" alt="my photo"/>
                 </div>
               </div>
               <div class="header__column">
@@ -63,7 +63,7 @@
                 <div class="main__item item">
                   <div class="item__row">
                     <div class="item__image">
-                      <img src="/assets/code-solid.svg" alt="code-solid" />
+                      <img src="./assets/code-solid.svg" alt="code-solid" />
                     </div>
                     <div class="item__body">
                       <div class="item__title">Example code</div>
@@ -85,7 +85,7 @@ return a * b;
                   <div class="item__row">
                     <div class="item__image">
                       <img
-                        src="/assets/file-lines-regular.svg"
+                        src="./assets/file-lines-regular.svg"
                         alt="file-lines-regular"
                       />
                     </div>
@@ -104,7 +104,7 @@ return a * b;
                 <div class="main__item item">
                   <div class="item__row">
                     <div class="item__image">
-                      <img src="/assets/gears-solid.svg" alt="gears-solid" />
+                      <img src="./assets/gears-solid.svg" alt="gears-solid" />
                     </div>
                     <div class="item__body">
                       <div class="item__title">my skills</div>
@@ -121,7 +121,7 @@ return a * b;
                 <div class="main__item item">
                   <div class="item__row">
                     <div class="item__image">
-                      <img src="/assets/language-solid.svg" alt="language-solid" />
+                      <img src="./assets/language-solid.svg" alt="language-solid" />
                     </div>
                     <div class="item__body">
                       <div class="item__title">languages</div>
